# assorted-hooks

./: .gitignore  .pdm-python  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  pylock.toml  pyproject.toml  requirements.txt  tach.toml  tox.toml
dev/: get_package_version_dates.ipynb
docs/: check_archived_hooks.md  check_resolved_github_issues.md  check_tests_mirror_source.md  pyright_concise.md
docs/latex/: chktex.md  lacheck.md
docs/pygrep/: check_separator_length.md  pyarrow_timestamp_seconds.md  python_consider_using_raw_string.md  python_double_comment.md  python_match_case_builtins.md  python_no_blanket_type_ignore.md  python_no_builtin_eval.md  python_rename_axes_axis.md  python_system_exit.md
docs/python/: check_clean_interface.md  check_direct_imports.md  check_dunder_all.md  check_requirements_maintained.md  check_requirements_used.md  check_requirements_valid.md  check_signatures.md  check_standard_generics.md  check_typing.md  update_requirements.md
reports/: pytest.xml
src/: check_clean_interface.py  check_clean_interface.sh  check_requirements_used.py  check_requirements_used.sh  lacheck_wrapper.sh  pyright_wrapper.sh  update-requirements.sh  update_requirements.py  update_requirements.sh
src/assorted_hooks/: __init__.py  _unimplemented_check_clean_interface.py  _unimplemented_check_tests_folder_structure.py  _unimplemented_check_typing_style.py  ast_utils.py  check__all__exists.py  check_archived_hooks.py  check_direct_imports.py  check_dunder_all.py  check_dunder_all_exists.py  check_github_issues.py  check_imported_attributes.py  check_no_mixed_args.py  check_pyproject_requirements_maintained.py  check_pyproject_requirements_used.py  check_requirements_maintained.py  check_requirements_valid.py  check_spelling_wise_suffix.py  check_standard_generics.py  check_tests_folder_structure.py  check_tests_mirror_source.py  check_typing.py  check_typing_style.py  constants.py  imported_attributes.py  no_mixed_args.py  parser.py  prefer_abc_typing.py  pyproject_check_dependencies.py  pyproject_check_unmaintained.py  pyproject_update_dependencies.py  pyproject_update_deps.py  pyproject_validate_version.py  utils.py  validate-version.py
src/assorted_hooks/ast/: __init__.py  _clean_namespace.py  _unimplemented_check_tests_folder_structure.py  _unimplemented_check_typing_style.py  ast_utils.py  base.py  check_direct_imports.py  check_dunder_all.py  check_no_mixed_args.py  check_numpy.py  check_requirement_usage.py  check_runtime_data_protocol.py  check_signatures.py  check_standard_generics.py  check_typing.py  pyproject_check_dependencies.py  use_relative_imports.py
src/assorted_hooks/scripts/: __init__.py  check_clean_interface.py  check_deprecated_dependencies.py  check_requirements_used.py  pyproject_check_dependencies.py  pyproject_check_unmaintained.py  pyproject_update_dependencies.py  pyproject_validate_version.py  update_pyproject_requirements.py  update_requirements.py
src/assorted_hooks/standalone/: __init__.py  check_requirements_used.py  update_requirements.py
tests/: __init__.py  demo.tex  test.sh  test_all.sh  test_check_archived_hooks.sh  test_check_github_issues.sh  test_check_pyproject_requirements_used.sh  test_check_pyright_wrapper.sh  test_check_requirements_used.sh  test_check_signatures.sh  test_check_spelling_wise_suffix.sh  test_check_update_requirements.sh  test_no_mixed_args.py  test_raw_strings.py
tests/assorted_hooks/: __init__.py  test_ast_utils.py  test_check_requirements_used.py  test_check_unmaintained.py  test_runtime_data_protocol.py
tests/assorted_hooks/ast/: __init__.py  test_ast_utils.py  test_check_signatures.py  test_rewrite_absolute_imports.py
tests/assorted_hooks/ast/check_typing/: test_check_optional.py  test_isinstance_union_tuple.py  test_no_future_annotations.py  test_no_hints_overload_implementation.py  test_no_return_union.py  test_overload_default_ellipsis.py  test_pep604_union.py
tests/assorted_hooks/check_direct_imports/: __init__.py  test_direct_imports.py
tests/assorted_hooks/check_typing/: __init__.py  test_check_optional.py  test_check_typealias_union.py  test_isinstance_union_tuple.py  test_no_future_annotations.py  test_no_hints_overload_implementation.py  test_no_return_union.py  test_overload_default_ellipsis.py  test_pep604_union.py
tests/assorted_hooks/check_typing/reports/: pytest.xml
tests/assorted_hooks/reports/: pytest.xml
tests/assorted_hooks/scripts/: __init__.py
tests/assorted_hooks/standalone/: __init__.py  test_check_requirements_used.py
tests/reports/: pytest.xml
