[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.11"
name = "assorted-hooks"
version = "0.1.42"

authors = [{name="Randolf Scholz", email="randolf.scholz@gmail.com"},]
description = "Custom pre-commit hooks"
keywords = ["pre-commit"]
license = {file = "LICENSE"}
readme = "README.md"

dependencies = []

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
]
test = [
    "pytest>=7.4.3",
    "pytest-benchmark[histogram]>=4.0.0",
    "pytest-cov>=4.1.0",
    "pytest-rerunfailures>=13.0",
    "pytest-xdist>=3.5.0",
]


[project.urls]
homepage = "https://github.com/randolf-scholz/assorted-hooks"
documentation = "https://github.com/randolf-scholz/assorted-hooks"
repository = "https://github.com/randolf-scholz/assorted-hooks"


[project.scripts]
check-__all__-exists = "assorted_hooks.check__all__exists:main"
check-imported-attributes = "assorted_hooks.check_imported_attributes:main"
check-no-mixed-args = "assorted_hooks.check_no_mixed_args:main"
check-standard-generics = "assorted_hooks.check_standard_generics:main"
check-typing = "assorted_hooks.check_typing:main"
# scripts
check-clean-interface = "assorted_hooks.scripts.check_clean_interface:main"
pyproject-check-deps = "assorted_hooks.scripts.pyproject_check_dependencies:main"
pyproject-update-deps = "assorted_hooks.scripts.pyproject_update_dependencies:main"
pyproject-validate-version = "assorted_hooks.scripts.pyproject_validate_version:main"

# region flake8 configuration ----------------------------------------------------------
[tool.flake8]
max-line-length = 120

# ANN: Annotations
# A:   builtins
# B:   bugbear
# B9:  bugbear future proof
# BLK: black
# C:   mccabe / comprehensions
# D:   docstring
# E:   pycodestyle errors
# F:   pyflakes warnings
# I:   import-order
# M:   flake8 extension for mutable default arguments
# RST: restructured text
# W:   pycodestyle warnings
# Y:   type hinting in stub files
# select = B,B9,BLK,C,D,E,F,I,S,W

#filename = [
#    "src/",
#    "tests/",
#    "examples/",
#    "docs/conf.py",
#    "run/",
#    "dev/",
#]

ignore = [
    "ANN10",  # ANN10 Missing type annotation for self in method
    "ANN10",  # ANN10 Missing type annotation for cls in classmethod
    "ANN40",  # ANN40 Dynamically typed expressions (typing.Any) are disallowed
    "B024",   # B024 BaseDatasetMetaClass is an abstract base class, but it has no abstract methods
    "D102",   # D102 Missing docstring in public method
    "D105",   # D105 Missing docstring in magic method
    "D107",   # D107 Missing docstring in __init__
    "E202",   # E202 whitespace before ']'
    "E203",   # E203 whitespace before ':'
    "E241",   # E241 multiple spaces after ','
    "E704",   # E704 multiple statements on one line (def)
    "E741",   # E741 ambiguous variable nam
    "W503",   # W503 line break before binary operator
]
per-file-ignores = ["tests/*:D103"]

#Google Python style is not RST until after processed by Napoleon
#See https://github.com/peterjc/flake8-rst-docstrings/issues/17
extend-ignore = [
    "D407",    # Missing dashed underline after section
    "RST201",  # Unexpected indentation.
    "RST203",  # Definition list ends without a blank line# unexpected unindent.
    "RST301",  # Block quote ends without a blank line# unexpected unindent.
    # "ANN101",  # Missing type annotation for self in method
    # "ANN201",  # Missing return type annotation for public function
    # "RST303",  # Unknown directive type
    # "RST304",  # Unknown interpreted text role
]

exclude = [
    "*.pyi",
    "./.git",
    "./.idea",
    "./.venv",
    "./bugs",
    "./build",
    "./dev",
    "./scripts",
    "./venv",
]

# Annotations plugin
# Suppress ANN200-level errors for functions that have no return (return None)
suppress-none-returning = true
allow-untyped-defs = true

# docstring plugin
docstring-convention = "google"
rst-roles = [
    "mod",
    "func",
    "data",
    "const",
    "class",
    "meth",
    "attr",
    "exc",
    "obj",
]
rst-directives = [
    "Signature",
    "literalinclude",
]
# endregion flake8 configuration -------------------------------------------------------



# region PyLint Configuration ----------------------------------------------------------
[tool.pylint]
[tool.pylint."MESSAGES CONTROL"]
enable= [
    "useless-suppression",
]
disable= [
    "C0103",  # invalid-name
    "C0144",  # non-ascii-name
    "C0204",  # bad-mcs-classmethod-argument
    "C0415",  # import-outside-toplevel
    "E0611",  # no-name-in-module
    "E1101",  # no-member  # FIXME: too many false positives
    "E1121",  # too-many-function-args  # too many false positives
    "E1123",  # unexpected-keyword-arg  # too many false positives
    "E1130",  # invalid-unary-operand-type
    "R0801",  # similar lines
    "R0902",  # too-many-instance-attributes
    "R0903",  # too-few-public-methods
    "R0911",  # too-many-return-statements
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "R0915",  # too-many-statements
#    "W0221",  # arguments-differ
#    "W0511",  # (fixme) (todos)
    "W1113",  # keyword-arg-before-vararg
    "W2301",  # unnecessary-ellipsis
]
fail-on= [
    "C0116",  # missing-function-docstring
]
fail-under= 9.0

[tool.pylint.REPORTS]
# Set the output format. Available formats are text, parseable, colorized, json and
# msvs (visual studio). You can also give a reporter class, e.g. mypackage.mymodule.MyReporterClass
output-format="colorized"

[tool.pylint.FORMAT]
max-line-length=120

[tool.pylint.TYPECHECK]
# List of members which are set dynamically and missed by pylint inference system, and so shouldn't
# trigger E1101 when accessed. Python regular expressions are accepted.
generated-members=["numpy.*", "torch.*"]
# endregion PyLint Configuration -------------------------------------------------------



# region mypy configuration ------------------------------------------------------------
[tool.mypy]
files = ["src/", "tests/"]
plugins = []

# platform configuration
python_version = "3.11"
#platform = "linux"

disable_error_code = [
    "func-returns-value",  # checks style, not type https://github.com/python/mypy/issues/6549
]

# warnings
warn_no_return = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

# disallow dynamic typing
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = false

# untyped definitions
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = false

# strictness flags
allow_untyped_globals = false
allow_redefinition = false
#local_partial_types = true
no_implicit_reexport = false
#strict_equality = false
#strict = false
#disable_error_code = []
#enable_error_code =[]

# configuring error messages
show_error_context = true
show_column_numbers = true
show_error_end = true
hide_error_codes = false
pretty = true
no_error_summary = false
no_color_output = false
show_absolute_path = false
#soft_error_limit = 200

# incremental mode
no_incremental = false
#cache_dir = ".mypy_cache/"
#sqlite_cache = true
#cache_fine_grained = true
#skip_version_check = false
#skip_cache_mtime_checks = false

# advanced
pdb = false

[[tool.mypy.overrides]]
module = [
    "h5py.*",
    "matplotlib.*",
    "modin.*",
    "numba.*",
    "pandas.*",
    "pyarrow.*",
    "scipy.*",
    "sklearn.*",
    "tqdm.*",
]
ignore_missing_imports = true
# endregion mypy configuration ---------------------------------------------------------



# region isort Configuration -----------------------------------------------------------
[tool.isort]
# isort profiles: black, django, pycharm, google, open_stack, plone, attrs, hug, wemake, appnexus
# black-compatible: black, appnexus
py_version=311
profile="black"
src_paths=["src/", "tests/"]
combine_as_imports = true
# flake8-profiles: appnexus, cryptography, edited, google, pep8, pycharm, smarkets
# black-compatible: black, appnexus
# endregion isort Configuration --------------------------------------------------------



# region Black Configuration -----------------------------------------------------------
[tool.black]
line-length = 88
target-version = ['py311']
color = true
# endregion Black Configuration --------------------------------------------------------



# region Pydocstyle Configuration ------------------------------------------------------
[tool.pydocstyle]
convention = "google"
#count = true
# https://github.com/PyCQA/pydocstyle/issues/363
#match = '.*\.py$'
#match = '(?!test_).*\.py$'
match_dir = '^(?!(.venv|bugs|dev|.*ipynb_checkpoints)).*'
add-ignore = [
    "D105",    # Missing docstring in magic method
    "D102",    # Missing docstring in public method
    "D107",    # Missing docstring in __init__
]
# endregion Pydocstyle Configuration ---------------------------------------------------



# region Pyright Configuration ---------------------------------------------------------
[tool.pyright]
root = ""
venv = ".venv"
venvPath = "."
pythonVersion = "3.11"
pythonPlatform = "Linux"
stubPath = ""
include = ["src/", "tests/"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.ipynb_checkpoints",
]
executionEnvironments = [
    {root = "src/", pythonVersion = "3.11", pythonPlatform = "Linux", extraPaths = [""]}
]
useLibraryCodeForTypes = false   # otherwise hundreds of pandas false-positives.
# Type Check Diagnostics Settings
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md#type-check-diagnostics-settings
reportMissingImports = false
reportMissingTypeStubs = false
reportUnsupportedDunderAll = false
reportPrivateImportUsage = false
# endregion Pyright Configuration ------------------------------------------------------



# region pytest configuration ----------------------------------------------------------
[tool.pytest]
# NOTE: currently unused https://docs.pytest.org/en/stable/reference/customize.html

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [ "src/", "tests/"]
addopts = [
    "--doctest-modules",
    "--junit-xml=reports/pytest.xml",
    # rerunfailures options
#    "--reruns=",          # number of times to re-run failed tests. defaults to 0.
#    "--reruns-delay=",    # add time (seconds) delay between reruns.
#    "--only-rerun=",      # If passed, only rerun errors matching the regex provided.
    # coverage options
#    "--cov=assorted_hooks",  # Path or package name to measure during execution (multi-allowed).
#    "--cov-report=term:skip-covered",
#    "--cov-report=xml:reports/coverage.xml",
#    "--cov-report=annotate:reports/coverage",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]
required_plugins = [
    "pytest-rerunfailures",
    "pytest-cov",
]
# endregion pytest configuration -------------------------------------------------------



# region coverage configuration --------------------------------------------------------
[tool.coverage]

[tool.coverage.paths]
source = ["src/assorted_hooks/"]

[tool.coverage.report]
exclude_lines = [
    "@abstractmethod",
    "@abc.abstractmethod",
    "@overload",
    "@typing.overload",
]

[tool.coverage.run]
source = ["src/"]
# endregion coverage configuration -----------------------------------------------------



# region ruff configuration ------------------------------------------------------------
[tool.ruff]
line-length = 120
# endregion ruff configuration ---------------------------------------------------------
